Updates in Exercise List related to the discipline Fundamentals of Statistics (project: MBA Data Science)

--- a/Bootstrap/Bootstrap Simulation.ipynb
+++ b/Bootstrap/Bootstrap Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72ca708f",
+   "id": "f515187c",
    "metadata": {},
    "source": [
     "# Confidence interval through bootstrapping and Student's t assumption"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faa24166",
+   "id": "fc9795bc",
    "metadata": {},
    "source": [
     "In this program, we shall verify how robust is the confidence interval estimated from non-normal sample (exponentially distributed) through two methods:\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "632407e1",
+   "id": "7e52893d",
    "metadata": {},
    "source": [
     "## Libraries"
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "3356fd2b",
+   "id": "bac4509c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea20214c",
+   "id": "3baceb45",
    "metadata": {},
    "source": [
     "## Confidence interval by bootstrapping"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916217b2",
+   "id": "dbd9bd5a",
    "metadata": {},
    "source": [
     "Defining some functions"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "d2dbdfbc",
+   "id": "90301f4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85a84c90",
+   "id": "e37c6330",
    "metadata": {},
    "source": [
     "Perfoming the sampling <code>n_total</code> and testing if the populational mean is within the estimated confidence interval"
@@ -100,15 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "id": "6461b323",
+   "execution_count": 208,
+   "id": "f980441a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The population mean was between the estimated confidence interval 99.00%\n"
+      "The population mean was between the estimated confidence interval 98.00%\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119325e9",
+   "id": "8b8aa69a",
    "metadata": {},
    "source": [
     "## Confidence interval by Student's t assumption"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117fdc7c",
+   "id": "aea55d66",
    "metadata": {},
    "source": [
     "Let us assuming the sample normally distributed, even though we know they are not, and then let us evaluate the confidence interval using a Student's t distribution. "
@@ -144,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "id": "7f2d872c",
+   "execution_count": 207,
+   "id": "3c0c7fc9",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d89fe7c",
+   "id": "d41f20fd",
    "metadata": {},
    "source": [
     "## Conclusion"
@@ -184,10 +184,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5fddfef",
+   "id": "f2ea7f64",
    "metadata": {},
    "source": [
-    "The bootstrapping approach always obtain a estimated confidence interval which includes the populational mean at least 95% of the time, whilst the Student's t approach rarely reproduces the desired result. If we run "
+    "The bootstrapping approach always obtain a estimated confidence interval which includes the populational mean at least 95% of the time, whilst the Student's t approach rarely reproduces the desired result. If we run the block codes above, we shall always obtain a good accuracy of the boostrapping approach and an insufficient accuracy of the Student's t approach."
    ]
   }
  ],
